[#4] feat : 쉘 스크립트로 재시작 - 포트 충돌 문제 해결 안됨