@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.5'
+    id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -42,7 +42,8 @@ bootRun {
             '-XX:+HeapDumpOnOutOfMemoryError',
             '-XX:HeapDumpPath=./heapdump.hprof',
             '-XX:+ExitOnOutOfMemoryError',
-            '-Xlog:gc*:file=./gc-oom.log'
+            '-XX:OnOutOfMemoryError=./restart.sh'
+
     ])
 }
 
